<resources>
    <string name="app_name">Run!</string>
    <string name="start_run">Start Your Run</string>
    <string name="random_run">Random Run For You</string>
    <string name="last_run">Last Run</string>
    <string name="pop_run1">Shoal Creek</string>
    <string name="pop_run2">Barton Creek</string>
    <string name="pop_run3">Pease Park</string>
    <string name="pop_run4">Barton Springs</string>
    <string name="pop_run5">Town Lake</string>
    <string name="pop_run6">The Greenbelt</string>
    <string name="popular_runs">Popular Runs</string>
    <string name="date1">3/22/2022</string>
    <string name="date2">3/17/2022</string>
    <string name="miles1">Miles: 3.56</string>
    <string name="miles2">Miles: 2.10</string>
    <string name="time1">Time: 29:15</string>
    <string name="time2">Time: 16:10</string>
    <string name="recent_runs">Recent Runs</string>
    <string name="distance_value">%d meters</string>
    <string name="title_activity_maps">Map</string>
    <string name="average_pace_label">Steps</string>
    <string name="elapsed_time_label">Elapsed time</string>
    <string name="distance_label">Distance</string>
    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pause_label">Pause</string>

</resources>